--- a/lostAndFind-server/src/main/resources/application.properties
+++ b/lostAndFind-server/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 server.port=8082
 spring.jpa.hibernate.ddl-auto=update
+#spring.data.jpa.repositories.enabled=true
 #spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/lost&find
-spring.datasource.url=jdbc:mysql://localhost:3306/test
+spring.datasource.url=jdbc:mysql://localhost:3306/lost&find
 spring.datasource.username=root
 spring.datasource.password=
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
