--- a/lostAndFind-client/package.json
+++ b/lostAndFind-client/package.json
@@ -19,9 +19,12 @@
     "@angular/platform-browser": "~8.2.7",
     "@angular/platform-browser-dynamic": "~8.2.7",
     "@angular/router": "~8.2.7",
+    "@ng-bootstrap/ng-bootstrap": "^5.3.1",
     "bootstrap": "^4.4.1",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
     "ng-flash-messages": "^0.3.0",
+    "ngx-bootstrap": "^5.6.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
