--- a/lostAndFind-client/package.json
+++ b/lostAndFind-client/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser-dynamic": "~8.2.7",
     "@angular/router": "~8.2.7",
     "@ng-bootstrap/ng-bootstrap": "^5.3.1",
+    "@ngx-translate/core": "^12.1.2",
+    "@ngx-translate/http-loader": "^4.0.0",
     "bootstrap": "^4.4.1",
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
