--- a/lost_and_find_mobile/pubspec.yaml
+++ b/lost_and_find_mobile/pubspec.yaml
@@ -19,6 +19,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  fluro: ^1.6.3
+  flutter_spinkit: "^4.1.2"
+  logger: ^0.9.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
