--- a/lost_and_find_mobile/pubspec.yaml
+++ b/lost_and_find_mobile/pubspec.yaml
@@ -22,6 +22,8 @@ dependencies:
   fluro: ^1.6.3
   flutter_spinkit: "^4.1.2"
   logger: ^0.9.1
+  dio: ^3.0.9
+  shared_preferences: ^0.5.7+3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
