--- a/lostAndFind-client/angular.json
+++ b/lostAndFind-client/angular.json
@@ -128,6 +128,10 @@
           }
         }
       }
-    }},
-  "defaultProject": "lostAndFind-client"
+    }
+  },
+  "defaultProject": "lostAndFind-client",
+  "cli": {
+    "analytics": false
+  }
 }
