--- a/lost_and_find_mobile/pubspec.yaml
+++ b/lost_and_find_mobile/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   logger: ^0.9.1
   dio: ^3.0.9
   shared_preferences: ^0.5.7+3
+  circular_bottom_navigation: ^1.0.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
