--- a/lostAndFind-server/src/main/resources/application.properties
+++ b/lostAndFind-server/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.datasource.password=
 #spring.datasource.username= root
 #spring.datasource.password= 123456
 
-#spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDialect
 #spring.jpa.hibernate.ddl-auto= update
 
 # App Properties
