--- a/lostAndFind-server/src/main/resources/application.properties
+++ b/lostAndFind-server/src/main/resources/application.properties
@@ -2,8 +2,8 @@ server.port=8082
 spring.jpa.hibernate.ddl-auto=update
 #spring.data.jpa.repositories.enabled=true
 #spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/lost&find
-spring.datasource.url=jdbc:mysql://localhost:3306/test2
-#spring.datasource.url=jdbc:mysql://localhost/test?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
+#spring.datasource.url=jdbc:mysql://localhost:3306/lost&find
+spring.datasource.url=jdbc:mysql://localhost/lost&find?useUnicode=true&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
 #spring.datasource.driver-class-name=com.mysql.jdbc.Driver
