--- a/lost_and_find_mobile/pubspec.yaml
+++ b/lost_and_find_mobile/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   dio: ^3.0.9
   shared_preferences: ^0.5.7+3
   circular_bottom_navigation: ^1.0.1
+  location: ^2.3.5
+  geolocator: ^5.1.5
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
