Done upload photo function in owner item details

--- a/lostAndFind-server/src/main/resources/application.properties
+++ b/lostAndFind-server/src/main/resources/application.properties
@@ -18,3 +18,5 @@ spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQL5InnoDBDiale
 # App Properties
 bezkoder.app.jwtSecret= bezKoderSecretKey
 bezkoder.app.jwtExpirationMs= 86400000
+
+upload.location=E:/MY_PROJECTS/CAMPAZ/3rd year/img/
