--- a/lostAndFind-client/angular.json
+++ b/lostAndFind-client/angular.json
@@ -38,8 +38,7 @@
             "scripts": [
               "./node_modules/jquery/dist/jquery.js",
               "./node_modules/bootstrap/dist/js/bootstrap.js",
-              "./node_modules/jquery/dist/jquery.min.js",
-              "./node_modules/bootstrap/dist/js/bootstrap.js.map"
+              "./node_modules/jquery/dist/jquery.min.js"
             ]
           },
           "configurations": {
