--- a/lostAndFind-client/package.json
+++ b/lostAndFind-client/package.json
@@ -23,16 +23,18 @@
     "@ngx-translate/core": "^12.1.2",
     "@ngx-translate/http-loader": "^4.0.0",
     "bootstrap": "^4.5.2",
+    "chart.js": "^2.9.3",
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
     "ng-flash-messages": "^0.3.0",
+    "ng2-charts": "^2.4.2",
     "ngx-bootstrap": "^5.6.1",
     "rxjs": "~6.4.0",
     "tslib": "^1.13.0",
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.803.28",
+    "@angular-devkit/build-angular": "^0.803.24",
     "@angular/cli": "^8.3.28",
     "@angular/compiler-cli": "~8.2.7",
     "@angular/language-service": "~8.2.7",
